Backport to 1.20